improve structure checking add negation to structure position ingredient change from custom FluidIngredient to vanilla SizedFluidIngredient update to latest version of KubeJS, JEI and Neoforge add progress textures being directional add scrollable panel to item buses that exceeds 6 rows update sound customization of volumes and fix sound ticking not playing the entire sound fix hatch textures being grown over time