@@ -5,12 +5,11 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
+import com.mojang.brigadier.StringReader;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.datafixers.util.Either;
-import com.mojang.datafixers.util.Pair;
 import com.mojang.serialization.DataResult;
-import com.mojang.serialization.JsonOps;
 import es.degrassi.mmreborn.api.codec.NamedCodec;
-import es.degrassi.mmreborn.common.util.Utils;
 import lombok.Getter;
 import lombok.Setter;
 import net.minecraft.core.registries.BuiltInRegistries;
@@ -27,6 +26,7 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Rotation;
 import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.pattern.BlockInWorld;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -39,23 +39,50 @@ import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public class BlockIngredient implements IIngredient<PartialBlockState> {
-  public static final BlockIngredient AIR = new BlockIngredient(PartialBlockState.AIR);
-  public static final BlockIngredient ANY = new BlockIngredient(PartialBlockState.ANY);
-  public static final BlockIngredient MACHINE = new BlockIngredient(PartialBlockState.MACHINE);
-  public static final BlockIngredient NOT_MACHINE = new BlockIngredient(PartialBlockState.NOT_MACHINE);
+public class BlockIngredient implements IIngredient<PartialBlockState, BlockInWorld> {
+  public static final BlockIngredient AIR = new BlockIngredient(false, PartialBlockState.AIR);
+  public static final BlockIngredient ANY = new BlockIngredient(false, PartialBlockState.ANY);
+  public static final BlockIngredient MACHINE = new BlockIngredient(false, PartialBlockState.MACHINE);
+  public static final BlockIngredient NOT_MACHINE = new BlockIngredient(true, PartialBlockState.MACHINE);
 
-  public static final NamedCodec<BlockIngredient> TAG_CODEC = NamedCodec.STRING.comapFlatMap(string -> {
+  public static final NamedCodec<BlockIngredient> STRING_CODEC = NamedCodec.STRING.comapFlatMap(s -> {
     try {
-      return DataResult.success(BlockIngredient.create(string));
-    } catch (IllegalArgumentException e) {
+      final String original = s;
+      StringReader reader = new StringReader(s);
+      reader.skipWhitespace();
+      boolean not = false;
+      if (reader.peek() == '!') {
+        not = true;
+        reader.skip();
+      }
+      if (reader.peek() == '[') {
+        reader.skip();
+        if (reader.getRemaining().endsWith("]")) {
+          s = reader.getRemaining().substring(0, s.length() - 1);
+        } else {
+          s = reader.getRemaining();
+        }
+      }
+      String[] arr = s.split(", ");
+      return DataResult.success(
+          Arrays.stream(arr)
+              .map(string -> {
+                try {
+                  return BlockIngredient.of(string);
+                } catch (CommandSyntaxException e) {
+                  throw new IllegalArgumentException(e);
+                }
+              })
+              .reduce(new BlockIngredient(not, Collections.emptyList(), Collections.emptyList()), BlockIngredient::merge)
+      );
+    } catch(IllegalArgumentException e) {
       return DataResult.error(e::getMessage);
     }
-  }, BlockIngredient::getString, "BlockIngredient with tag");
+  }, BlockIngredient::getString, "BlockIngredient from string");
 
-  public static final NamedCodec<BlockIngredient> CODEC = NamedCodec.either(
+  public static final NamedCodec<BlockIngredient> ING_CODEC = NamedCodec.either(
       PartialBlockState.CODEC,
-      TAG_CODEC,
+      STRING_CODEC,
       "Block Ingredient"
   ).listOf().flatComapMap(
       list -> {
@@ -79,65 +106,73 @@ public class BlockIngredient implements IIngredient<PartialBlockState> {
       "Block Ingredient"
   );
 
+  public static final NamedCodec<BlockIngredient> MAP_CODEC = NamedCodec.record(blockIngredientInstance ->
+          blockIngredientInstance.group(
+              NamedCodec.BOOL.optionalFieldOf("not", false).forGetter(ingredient -> ingredient.not),
+              ING_CODEC.fieldOf("ingredient").forGetter(Function.identity())
+          ).apply(blockIngredientInstance, (not, ingredient) -> new BlockIngredient(not, ingredient.getTags(),
+              ingredient.uniqueStates().toList())),
+      "Block ingredient"
+  );
+
+  public static final NamedCodec<BlockIngredient> CODEC =
+      NamedCodec.either(MAP_CODEC, STRING_CODEC).xmap(either -> either.map(Function.identity(), Function.identity()),
+          Either::left, "Block Ingredient");
+
   private final Supplier<List<PartialBlockState>> partialBlockStates;
-  @Getter
-  private final boolean isTag;
   @Getter
   @Setter
   private List<TagKey<Block>> tags = Lists.newArrayList();
+  @Getter
+  private final boolean not;
 
   public BlockIngredient(List<TagKey<Block>> tags, List<PartialBlockState> states) {
+    this(false, tags, states);
+  }
+
+  public BlockIngredient(boolean not, List<TagKey<Block>> tags, List<PartialBlockState> states) {
     List<PartialBlockState> statesCopy = Lists.newArrayList(states);
-    this.isTag = !tags.isEmpty();
-    if (isTag) {
-      this.tags.addAll(tags);
-      tags.forEach(tag ->
-          statesCopy.addAll(TagUtil.getBlocks(tag)
-              .map(PartialBlockState::new)
-              .toList())
-      );
-    }
+    this.tags.addAll(tags);
+    this.not = not;
+    tags.forEach(tag ->
+        statesCopy.addAll(TagUtil.getBlocks(tag)
+            .map(PartialBlockState::new)
+            .toList())
+    );
     this.partialBlockStates = Suppliers.memoize(() -> ImmutableList.copyOf(statesCopy));
   }
 
-  public BlockIngredient(PartialBlockState partialBlockState) {
-    this(Collections.emptyList(), Collections.singletonList(partialBlockState));
+  public BlockIngredient(boolean not, PartialBlockState partialBlockState) {
+    this(not, Collections.emptyList(), Collections.singletonList(partialBlockState));
   }
 
-  public static BlockIngredient create(String s) throws IllegalArgumentException {
-    if (s.startsWith("[")) {
-      if (s.endsWith("]")) {
-        s = s.substring(1, s.length() - 1);
-      } else {
-        s = s.substring(1);
-      }
-    }
-    String[] arr = s.split(", ");
-    List<TagKey<Block>> tags = Lists.newArrayList();
-    List<PartialBlockState> states = Lists.newArrayList();
-    Arrays.asList(arr).forEach(string -> {
-      if (string.startsWith("#")) {
-        string = string.substring(1);
-        if (!Utils.isResourceNameValid(string))
-          throw new IllegalArgumentException(String.format("Invalid tag id : %s", string));
-        tags.add(TagKey.create(Registries.BLOCK, ResourceLocation.parse(string)));
-      } else {
-        try {
-          DataResult<PartialBlockState> result = PartialBlockState.CODEC.decode(JsonOps.INSTANCE, JsonOps.INSTANCE.createString(string)).map(Pair::getFirst);
-          states.add(result.getOrThrow());
-        } catch (Exception exception) {
-          throw new IllegalArgumentException(String.format("Invalid block id: %s", string));
-        }
-      }
-    });
-    if (tags.isEmpty() && states.isEmpty())
-      throw new IllegalArgumentException("Invalid tags or states provided, expected min size of 1");
+  public BlockIngredient(PartialBlockState partialBlockState) {
+    this(false, partialBlockState);
+  }
 
-    return new BlockIngredient(tags, states);
+  public static BlockIngredient create(Object o) throws IllegalArgumentException, CommandSyntaxException {
+    if (o instanceof List<?> sa) {
+      return sa.stream()
+          .filter(s -> s instanceof CharSequence)
+          .map(s -> (CharSequence) s)
+          .map(s -> {
+            try {
+              return BlockIngredient.of(s);
+            } catch (CommandSyntaxException e) {
+              throw new IllegalArgumentException(e);
+            }
+          })
+          .reduce(
+              new BlockIngredient(false, Collections.emptyList(), Collections.emptyList()),
+            (curr, prev) -> prev.merge(curr)
+          );
+    } else if (!(o instanceof CharSequence s)) throw new IllegalArgumentException("Block ingredient must be a string or string[]");
+    else return BlockIngredient.of(s);
   }
 
   public BlockIngredient copy() {
     return new BlockIngredient(
+        not,
         tags.stream()
             .map(TagKey::location)
             .map(tag -> TagKey.create(BuiltInRegistries.BLOCK.key(), tag))
@@ -155,8 +190,21 @@ public class BlockIngredient implements IIngredient<PartialBlockState> {
   }
 
   @Override
-  public boolean test(PartialBlockState partialBlockState) {
-    return this.partialBlockStates.get().stream().anyMatch(state -> state.getBlockState() == partialBlockState.getBlockState());
+  public boolean test(BlockInWorld block) {
+    boolean isTag = !this.tags.isEmpty();
+    if (isTag) {
+      if (not) {
+        return this.tags.stream().noneMatch(tag -> block.getState().is(tag));
+      } else {
+        return this.tags.stream().anyMatch(tag -> block.getState().is(tag));
+      }
+    } else {
+      if (not) {
+        return uniqueStates().noneMatch(state -> state.test(block));
+      } else {
+        return uniqueStates().anyMatch(state -> state.test(block));
+      }
+    }
   }
 
   public List<ItemStack> getStacks(int amount) {
@@ -212,18 +260,6 @@ public class BlockIngredient implements IIngredient<PartialBlockState> {
     return ingredients;
   }
 
-  public boolean isNotAir() {
-    return !this.equals(BlockIngredient.AIR) && this.getAll().stream().noneMatch(state -> state.equals(PartialBlockState.AIR));
-  }
-
-  public boolean isNotAny() {
-    return !this.equals(BlockIngredient.ANY) && this.getAll().stream().noneMatch(state -> state.equals(PartialBlockState.ANY));
-  }
-
-  public boolean isNotMachine() {
-    return this.equals(BlockIngredient.NOT_MACHINE) && this.getAll().stream().allMatch(state -> state.equals(PartialBlockState.NOT_MACHINE));
-  }
-
   public MutableComponent getNamesUnified() {
     MutableComponent name = Component.empty();
     MutableComponent last = Component.empty();
@@ -255,10 +291,10 @@ public class BlockIngredient implements IIngredient<PartialBlockState> {
     );
 
     if (ingredients.size() == 1) {
-      return ingredients.get(0);
+      return ingredients.getFirst();
     }
 
-    return ingredients.toString();
+    return (this.not ? "!" : "") + ingredients;
   }
 
   @Override
@@ -267,7 +303,7 @@ public class BlockIngredient implements IIngredient<PartialBlockState> {
   }
 
   public BlockIngredient copyWithRotation(Rotation rotation) {
-    return new BlockIngredient(tags, getAll().stream().map(state -> state.copyWithRotation(rotation)).toList());
+    return new BlockIngredient(not, tags, getAll().stream().map(state -> state.copyWithRotation(rotation)).toList());
   }
 
   public BlockIngredient merge(BlockIngredient other) {
@@ -278,13 +314,13 @@ public class BlockIngredient implements IIngredient<PartialBlockState> {
     List<TagKey<Block>> tags = Lists.newArrayList();
     tags.addAll(this.tags);
     tags.addAll(other.tags);
-    return new BlockIngredient(tags, ingredients);
+    return new BlockIngredient(other.not || not, tags, ingredients);
   }
 
   @Override
   public JsonObject asJson() {
     JsonObject json = new JsonObject();
-    json.addProperty("isTag", isTag);
+    json.addProperty("not", not);
     json.addProperty("tags", tags.toString());
     JsonArray array = new JsonArray();
     getAll().forEach(state -> array.add(state.toString()));
@@ -294,8 +330,8 @@ public class BlockIngredient implements IIngredient<PartialBlockState> {
 
   public CompoundTag asTag() {
     CompoundTag tag = new CompoundTag();
-    tag.putBoolean("isTag", isTag);
     ListTag tagList = new ListTag();
+    tag.putBoolean("not", not);
     tags.forEach(t -> tagList.add(StringTag.valueOf(t.toString())));
     tag.put("tags", tagList);
     ListTag states = new ListTag();
@@ -304,18 +340,36 @@ public class BlockIngredient implements IIngredient<PartialBlockState> {
     return tag;
   }
 
-  public static BlockIngredient of(Object o) {
-    return (BlockIngredient) o;
+  public static BlockIngredient of(CharSequence s) throws CommandSyntaxException {
+    StringReader reader = new StringReader(s.toString());
+
+    reader.skipWhitespace();
+
+    boolean not = false;
+
+    if (reader.peek() == '!') {
+      not = true;
+      reader.skip();
+    }
+
+    if (reader.peek() == '#') {
+      reader.skip();
+      TagKey<Block> tag = TagKey.create(Registries.BLOCK, ResourceLocation.parse(reader.getRemaining()));
+      return new BlockIngredient(not, Collections.singletonList(tag), Collections.emptyList());
+    }
+
+    PartialBlockState state = PartialBlockState.of(reader.getRemaining());
+    return new BlockIngredient(not, Collections.emptyList(), Collections.singletonList(state));
   }
 
   @Override
   public boolean equals(Object o) {
     if (!(o instanceof BlockIngredient that)) return false;
-    return isTag == that.isTag && Objects.equals(partialBlockStates, that.partialBlockStates) && Objects.equals(tags, that.tags);
+    return this.not == that.not && Objects.equals(partialBlockStates, that.partialBlockStates) && Objects.equals(tags, that.tags);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(partialBlockStates, isTag, tags);
+    return Objects.hash(not, partialBlockStates, tags);
   }
 }
